[tool.poetry]
name = "splyne"
version = "0.0.5"
description = "Python visualization library for Geo"
authors = ["Pornopatsan <sapaeff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
haversine = "^2.4"
numpy = "^1.20"
pandas = "^1.3"
pydeck = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
